--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,12 @@
 apply plugin: 'java'
-apply plugin: 'war'
-apply plugin: 'jetty'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile "javax.ws.rs:jsr311-api:1.1"
-    compile "com.sun.jersey:jersey-core:1.9.1"
-    compile "com.sun.jersey:jersey-server:1.9.1"
-    compile "com.sun.jersey:jersey-json:1.9.1"
-    compile 'com.sun.jersey.contribs:jersey-contribs:1.19'
+    compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
+    compile 'org.glassfish.jersey.core:jersey-client:2.22.2'
+    compile 'org.glassfish.jersey.containers:jersey-container-jdk-http:2.22.2'
+    compile 'org.glassfish.jersey.media:jersey-media-moxy:2.22.2'
 }
