--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,18 @@
-apply plugin: 'java'
+allprojects {
+    apply plugin: 'java'
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 
-repositories {
-    mavenCentral()
+    repositories {
+        mavenCentral()
+    }
+}
+
+jar {
+    enabled = false
 }
 
 dependencies {
-    compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
-    compile 'org.glassfish.jersey.core:jersey-client:2.22.2'
-    compile 'org.glassfish.jersey.containers:jersey-container-jdk-http:2.22.2'
-    compile 'org.glassfish.jersey.media:jersey-media-moxy:2.22.2'
+    compile project(':server')
+    compile project(':demo')
 }
