--- a/server/build.gradle
+++ b/server/build.gradle
@@ -3,4 +3,6 @@ dependencies {
     compile 'org.glassfish.jersey.core:jersey-client:2.22.2'
     compile 'org.glassfish.jersey.containers:jersey-container-jdk-http:2.22.2'
     compile 'org.glassfish.jersey.media:jersey-media-moxy:2.22.2'
+    compile 'com.mashape.unirest:unirest-java:1.4.9'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.7.4'
 }
