--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'com.github.johnrengelman.shadow' version '1.2.3'
+}
+
 allprojects {
     apply plugin: 'java'
     sourceCompatibility = 1.8
@@ -15,4 +19,14 @@ jar {
 dependencies {
     compile project(':server')
     compile project(':demo')
+}
+
+jar.dependsOn shadowJar
+
+shadowJar {
+    dependencies {
+        exclude(dependency(':demo'))
+    }
+    baseName = 'communications-all'
+    classifier = ''
 }
